--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,24 @@
 /* MASTER STYLES */
+#scrollToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; /* Hidden by default */
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#scrollToTopBtn:hover {
+    background-color: #0056b3;
+}
+
+
 body {
     margin: 0%;
     font-family: "Lato", sans-serif;
